Fix flickering issue Lock touched on departures scroll

--- a/src/styl/departures.styl
+++ b/src/styl/departures.styl
@@ -44,6 +44,7 @@
                 color: dark-blue
                 padding: 0 global-margin-right 2% global-margin-right
                 background: #FFF
+                transform: translate3d(0,0,0)
 
                 &.day {
                     padding: 4%
